--- a/build.gradle
+++ b/build.gradle
@@ -1,25 +1,32 @@
 plugins {
     id 'java-library'
     id 'application'
-    id "io.qameta.allure" version "2.8.0"
+    id "io.qameta.allure" version "2.8.1"
 }
 
 repositories {
     mavenCentral()
 }
 
+
+def allureVersion = "2.14.0",
+    junitVersion = "5.7.1"
+
 allure {
-    version = "2.8.0"
     autoconfigure = true
-    aspectjweaver = true
+    version = '2.14.0'
+
     useJUnit5 {
-        version = "2.8.0"
+        version = allureVersion
     }
 }
-
 dependencies {
-    testImplementation "io.qameta.allure:allure-java-commons:2.8.0"
+    //testImplementation "io.qameta.allure:allure-java-commons:2.8.1"
     //classpath "io.qameta.allure:allure-gradle:2.3"
+    implementation "io.qameta.allure:allure-java-commons:$allureVersion"
+    implementation "io.qameta.allure:allure-selenide:$allureVersion"
+    implementation "io.qameta.allure:allure-rest-assured:$allureVersion"
+
     testImplementation 'org.hamcrest:hamcrest-all:1.3'
     testImplementation 'com.codeborne:selenide:5.17.3'
 
@@ -39,4 +46,8 @@ task positive_test(type: Test) {
     useJUnitPlatform {
         includeTags 'positive'
     }
+}
+
+configurations {
+    testCompile
 }
