--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,10 @@ plugins {
     id "io.qameta.allure" version "2.8.1"
 }
 
+apply plugin: 'java-library-distribution'
+
+
+
 repositories {
     mavenCentral()
 }
