--- a/build.gradle
+++ b/build.gradle
@@ -5,21 +5,20 @@ plugins {
 }
 
 
-
 repositories {
     mavenCentral()
 }
 
 
-def allureVersion = "2.8.1",
+def allureVersion = "2.14.0",
     junitVersion = "5.7.1"
 
 allure {
     autoconfigure = true
-    version = '2.8.1'
+    version = '2.14.0'
 
     useJUnit5 {
-        version = allureVersion
+        version = junitVersion
     }
 }
 dependencies {
