--- a/build.gradle
+++ b/build.gradle
@@ -37,9 +37,9 @@ allure {
 }
 dependencies {
     //testImplementation "io.qameta.allure:allure-java-commons:2.8.1"
-    implementation "io.qameta.allure:allure-java-commons:$allureVersion"
-    implementation "io.qameta.allure:allure-selenide:$allureVersion"
-    implementation "io.qameta.allure:allure-rest-assured:$allureVersion"
+    implementation "io.qameta.allure:allure-java-commons:2.17.2"
+    implementation "io.qameta.allure:allure-selenide:2.17.2"
+    implementation "io.qameta.allure:allure-rest-assured:2.17.2"
 
     testImplementation 'org.hamcrest:hamcrest-all:1.3'
     testImplementation 'com.codeborne:selenide:5.17.3'
