--- a/build.gradle
+++ b/build.gradle
@@ -1,67 +1,48 @@
-buildscript {
-
-    repositories {
-        mavenCentral()
-    }
-
-    dependencies {
-        classpath "io.qameta.allure:allure-gradle:2.3"
-    }
-}
-
-
-
-
 plugins {
-    id 'java-library-distribution'
-    id 'application'
-    id 'io.qameta.allure' version '2.8.1'
+    id 'java'
+    id "io.qameta.allure" version "2.8.1"
 }
 
+version '1.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
+
 }
 
 
-def allureVersion = "2.17.2",
+tasks.withType(JavaCompile) {
+    options.encoding = 'UTF-8'
+
+}
+
+def allureVersion = "2.14.0",
     junitVersion = "5.7.1"
 
 allure {
     autoconfigure = true
-    version = allureVersion
+    version = '2.14.0'
 
     useJUnit5 {
         version = allureVersion
     }
 }
-dependencies {
-    //testImplementation "io.qameta.allure:allure-java-commons:2.8.1"
-    implementation "io.qameta.allure:allure-java-commons:2.17.2"
-    implementation "io.qameta.allure:allure-selenide:2.17.2"
-    implementation "io.qameta.allure:allure-rest-assured:2.17.2"
-
-    testImplementation 'org.hamcrest:hamcrest-all:1.3'
-    testImplementation 'com.codeborne:selenide:5.17.3'
-
-    testImplementation "org.junit.jupiter:junit-jupiter-api:5.6.2"
-    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.6.2"
-}
-
-tasks.withType(JavaCompile) {
-    options.encoding = 'UTF-8'
-}
-
-test {
-    useJUnitPlatform()
-}
-
-task positive_test(type: Test) {
-    useJUnitPlatform {
-        includeTags 'positive'
-    }
-}
 
 configurations {
     testCompile
+}
+
+dependencies {
+    implementation "com.codeborne:selenide:6.0.3"
+    implementation "io.qameta.allure:allure-java-commons:$allureVersion"
+    implementation "io.qameta.allure:allure-selenide:$allureVersion"
+    implementation "io.qameta.allure:allure-rest-assured:$allureVersion"
+
+    implementation "com.github.javafaker:javafaker:1.0.2"
+    implementation group: 'com.github.dzieciou.testing', name: 'curl-logger', version: '2.1.0'
+}
+
+
+test {
+    useJUnitPlatform()
 }
