--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,10 @@
+
+
 plugins {
-    id 'java-library'
+    //id 'java-library'
     id "io.qameta.allure" version "2.8.1"
 }
+apply plugin: 'java'
 
 version '1.0-SNAPSHOT'
 
